--- a/tigerCentralHome.html
+++ b/tigerCentralHome.html
@@ -1,9 +1,10 @@
-<!––Home page-->
-<!––Google account sign in API-->
+<!-- Deleted API keys, remaking properly -->
+<!--Home page-->
+<!--Google account sign in API-->
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="108826580867-esgc4sg64tncplnq2l13o58ap11ki71a.apps.googleusercontent.com">
 
-<!––Sign in button-->
+<!--Sign in button-->
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 <script>
     //Should display user info, doesn't work yet
